--- a/7. Machine learning: Scikit-learn.ipynb
+++ b/7. Machine learning: Scikit-learn.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Abbiamo chiamato un metodo speciale, chiamato *costrutture*, che inizializza (in questo caso senza parametri) un oggetto di tipo KNeighborsClassifier. Possiamo vedere\n",
+    "Abbiamo invocato un metodo speciale, chiamato *costrutture*, che inizializza (in questo caso senza parametri) un oggetto di tipo KNeighborsClassifier. Possiamo vedere\n",
     "\n",
     "- dalla documentazione: http://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html\n",
     "- posizionando il puntatore del mouse dentro le parentesi del costruttore e premendo Shift e due volte Tab\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -358,12 +358,12 @@
    "source": [
     "### Insiemi di addestramento e test\n",
     "\n",
-    "Dividiamo i dati in training e test set. Per prima cosa, mischiamo (*coerentemente*) i dati in modo casuale col metodo *shuffle*."
+    "Dividiamo i dati in training e test set. Per prima cosa, mischiamo (coerentemente!) i dati in modo casuale col metodo *shuffle*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNotFittedError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-027404650b81>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mneighbors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mKNeighborsClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-15-027404650b81>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mneighbors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mKNeighborsClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/neighbors/classification.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    143\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'csr'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 145\u001b[0;31m         \u001b[0mneigh_dist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneigh_ind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkneighbors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    146\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    147\u001b[0m         \u001b[0mclasses_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/neighbors/base.py\u001b[0m in \u001b[0;36mkneighbors\u001b[0;34m(self, X, n_neighbors, return_distance)\u001b[0m\n\u001b[1;32m    325\u001b[0m         \"\"\"\n\u001b[1;32m    326\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_fit_method\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 327\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mNotFittedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Must fit neighbors before querying.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    328\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    329\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mn_neighbors\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNotFittedError\u001b[0m: Must fit neighbors before querying."
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        "(0, 1)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -858,9 +858,9 @@
     "\n",
     "- caricare feature ed etichette del dataset *digits*: http://archive.ics.uci.edu/ml/datasets/Optical+Recognition+of+Handwritten+Digits\n",
     "- separare i dati (dopo averli mischiati, con seed=123) in questo modo:\n",
-    "    * 50 esempi per l'addestramento\n",
-    "    * 50 per la validazione\n",
-    "    * 50 per il test\n",
+    "    * 500 esempi per l'addestramento\n",
+    "    * 500 per la validazione\n",
+    "    * il resto per il test\n",
     "- scalare i dati a media 0 e varianza 1\n",
     "- costruire una griglia di valori di $k$: $\\left[1,2,3,5,10\\right]$\n",
     "- scegliere il valore della griglia che (produce il modello KNN che) registra la maggiore accuratezza sul validation set\n",
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -930,6 +930,8 @@
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier as KNN\n",
     "from sklearn.model_selection import GridSearchCV as KCV\n",
+    "\n",
+    "#carico iris e separo train da test...\n",
     "\n",
     "model = KNN()#modello da validare\n",
     "param_grid = [{'n_neighbors' : [1,2,3,5,10,20]}]#griglia dei valori degli iperparametri\n",
@@ -958,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -971,8 +973,8 @@
    ],
    "source": [
     "best_model = KCV(KNN(),\n",
-    "                  param_grid=[{'n_neighbors' : [1,2,3,5,10,20]}],\n",
-    "                  cv=5).fit(X_train, y_train).best_estimator_\n",
+    "                 param_grid=[{'n_neighbors' : [1,2,3,5,10,20]}],\n",
+    "                 cv=5).fit(X_train, y_train).best_estimator_\n",
     "\n",
     "print('Validated value for k:', best_model.n_neighbors)"
    ]
@@ -988,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1074,9 +1076,9 @@
    ],
    "source": [
     "best_model = KCV(DT(),\n",
-    "                  param_grid=[{'criterion' : ['gini', 'entropy'],\n",
-    "                               'max_depth' : [2, 3, 5, 10, 50]}],\n",
-    "                  cv=3).fit(X_train, y_train).best_estimator_\n",
+    "                 param_grid=[{'criterion' : ['gini', 'entropy'],\n",
+    "                              'max_depth' : [2, 3, 5, 10, 50]}],\n",
+    "                 cv=3).fit(X_train, y_train).best_estimator_\n",
     "\n",
     "print('Validated criterion:', best_model.criterion)\n",
     "print('Validated max depth:', best_model.max_depth)\n",
@@ -1096,7 +1098,7 @@
    "source": [
     "Regressione\n",
     "---\n",
-    "In un task di *regressione*, le etichette da apprendere sono valori numerici continui. Scikit-learn fornisce un'implementazione per la regressione di entrambi i modelli KNN e DT:\n",
+    "In un task di *regressione*, le etichette da apprendere sono valori numerici continui. Scikit-learn fornisce un'implementazione per la regressione sia per KNN che per DT:\n",
     "\n",
     "- http://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsRegressor.html\n",
     "- http://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html\n",
@@ -1106,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1168,7 @@
     "\n",
     "Che cosa misura il valore 0.67?\n",
     "\n",
-    "Ciascun task ha uno *scorer* di default. Nel caso della classificazione, il punteggio di un modello indica la sua accuratezza. Per quanto riguarda la regressione, la metrica di default è il *coefficient of determination* ($\\text{R}^2$), https://en.wikipedia.org/wiki/Coefficient_of_determination.\n",
+    "Ciascun task ha uno *scorer* di default. Nel caso della classificazione, il punteggio di un modello indica la sua accuratezza. Per quanto riguarda la regressione, la metrica di default è il *coefficiente di determinazione* ($\\text{R}^2$), https://en.wikipedia.org/wiki/Coefficient_of_determination.\n",
     "\n",
     "Se vogliamo utilizzare una metrica diversa, possiamo usare il modulo *metrics*: http://scikit-learn.org/stable/modules/classes.html#module-sklearn.metrics.\n",
     "\n",
@@ -1177,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1314,35 +1316,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE on training: 1.00\n"
+      "R2 on training: 1.00\n"
      ]
     }
    ],
    "source": [
-    "print('MAE on training: {:.2f}'.format(model.score(X_train, y_train)))"
+    "print('R2 on training: {:.2f}'.format(model.score(X_train, y_train)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il punteggio sul training set è massimo: abbiamo commesso overfitting.\n",
-    "\n",
-    "Il modello che abbiamo scelto ha fittato con troppa precisione i dati di apprendimento, perdendo la sua capacità di generalizzazione.\n",
+    "Il punteggio sul training set è massimo: abbiamo commesso overfitting. Il modello che abbiamo scelto ha fittato con troppa precisione i dati di apprendimento, perdendo la sua capacità di generalizzazione.\n",
     "\n",
     "Proviamo a rimediare validando la profondità di sviluppo (*max_depth* in sklearn), uno degli iperparametri di un DT."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1351,7 @@
      "text": [
       "Validated max_depth: 2\n",
       "\n",
-      "MAE on training/test set: 0.49/0.21\n"
+      "R2 on training/test set: 0.49/0.21\n"
      ]
     }
    ],
@@ -1365,7 +1365,7 @@
     "best_model = kcv.best_estimator_\n",
     "\n",
     "print('Validated max_depth:', best_model.max_depth)\n",
-    "print('\\nMAE on training/test set: {:.2f}/{:.2f}'.format(best_model.score(X_train, y_train),\n",
+    "print('\\nR2 on training/test set: {:.2f}/{:.2f}'.format(best_model.score(X_train, y_train),\n",
     "                                                         best_model.score(X_test, y_test)))"
    ]
   },
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1487,19 +1487,19 @@
     "\n",
     "Nel bagging, i singoli modelli che vengono combinati nell'ensemble hanno alta complessità. RF, in particolare, lavora con DT *fully developed*. Inoltre, poichè lo scopo è quello di ridurre il bias dell'ensemble grazie al voto a maggioranza, è preferibile un numero più grande possibile di alberi.\n",
     "\n",
-    "In breve, l'unico iperparametro che (secondo me) vale la pena di validare è il numero di feature da valutare ad ogni nodo. "
+    "In breve, l'unico iperparametro che (secondo l'autore di queste lezioni) vale la pena di validare è il numero di feature da valutare ad ogni nodo. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validated max_features : 5\n",
+      "Validated max_features : 10\n",
       "Accuracy on test set   : 0.98\n"
      ]
     }
@@ -1522,14 +1522,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SVM e SVR\n",
+    "SVC e SVR\n",
     "---\n",
     "Per finire, vediamo le implementazioni sklearn del modello *support vector machine*. Usiamo il dataset *breast_cancer*, e risolviamo il relativo problema di classificazione binaria con l'implementazione *SVC*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1646,7 @@
      "text": [
       "Validated C            : 2\n",
       "Validated gamma        : 0.001\n",
-      "Accuracy on test set   : 0.92\n"
+      "Validated accuracy on train/test: 0.99/0.92\n"
      ]
     }
    ],
@@ -1658,7 +1658,8 @@
     "\n",
     "print('Validated C            :', best_model.C)\n",
     "print('Validated gamma        :', best_model.gamma)\n",
-    "print('Accuracy on test set   : {:.2f}'.format(best_model.score(X_test, y_test)))"
+    "print('Validated accuracy on train/test: {:.2f}/{:.2f}'.format(best_model.score(X_train, y_train),\n",
+    "                                                               best_model.score(X_test, y_test)))"
    ]
   },
   {
@@ -1675,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1686,7 @@
       "Validated kernel       : linear\n",
       "Validated C            : 4\n",
       "Validated gamma        : auto\n",
-      "Accuracy on test set   : 0.96\n"
+      "Validated accuracy on test set   : 0.96\n"
      ]
     }
    ],
@@ -1701,7 +1702,7 @@
     "print('Validated kernel       :', best_model.kernel)\n",
     "print('Validated C            :', best_model.C)\n",
     "print('Validated gamma        :', best_model.gamma)\n",
-    "print('Accuracy on test set   : {:.2f}'.format(best_model.score(X_test, y_test)))"
+    "print('Validated accuracy on test set   : {:.2f}'.format(best_model.score(X_test, y_test)))"
    ]
   },
   {
@@ -1713,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
