--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -12,9 +12,9 @@
     "- [6.2](#6.2)\n",
     "- [6.3](#6.3)\n",
     "- [6.4](#6.4)\n",
-    "- [6.5](#6.5)\n",
     "- [KNN1](#KNN1)\n",
     "- [KNN2](#KNN2)\n",
+    "- [6.5](#6.5)\n",
     "- [7.4](#7.4)"
    ]
   },
@@ -1151,18 +1151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation accuracy with k 1: 0.78\n",
-      "Validation accuracy with k 2: 0.76\n",
-      "Validation accuracy with k 3: 0.62\n",
-      "Validation accuracy with k 5: 0.66\n",
-      "Validation accuracy with k 10: 0.52\n"
+      "Validation accuracy with k 1: 0.97\n",
+      "Validation accuracy with k 2: 0.96\n",
+      "Validation accuracy with k 3: 0.98\n",
+      "Validation accuracy with k 5: 0.97\n",
+      "Validation accuracy with k 10: 0.95\n"
      ]
     }
    ],
@@ -1177,8 +1177,8 @@
     "\n",
     "#Separo train e test\n",
     "X, y = shuffle(X, y, random_state=123)\n",
-    "X_tr, X_val, X_test = X[:50], X[50:100], X[100:150]\n",
-    "y_tr, y_val, y_test = y[:50], y[50:100], y[100:150]\n",
+    "X_tr, X_val, X_test = X[:500], X[500:1000], X[1000:]\n",
+    "y_tr, y_val, y_test = y[:500], y[500:1000], y[1000:]\n",
     "\n",
     "#Scalo i dati\n",
     "scaler = StandardScaler()\n",
@@ -1194,14 +1194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy with selected k: 0.84\n"
+      "Test accuracy with selected k: 0.96\n"
      ]
     }
    ],
@@ -1209,7 +1209,7 @@
     "import numpy as np\n",
     "\n",
     "#Rifitto su tutto il training set\n",
-    "best_model = neighbors.KNeighborsClassifier(n_neighbors=1).fit(np.vstack([X_tr, X_val]),\n",
+    "best_model = neighbors.KNeighborsClassifier(n_neighbors=3).fit(np.vstack([X_tr, X_val]),\n",
     "                                                               np.hstack([y_tr, y_val]))\n",
     "\n",
     "#Valuto accuratezza del miglior modello sul test set\n",
