--- a/8. Deep learning: Keras.ipynb
+++ b/8. Deep learning: Keras.ipynb
@@ -32,9 +32,9 @@
     "Sul web si trovano molte introduzioni alle reti neurali basate su Keras, come https://towardsdatascience.com/how-to-build-a-neural-network-with-keras-e8faa33d0ae4.\n",
     "\n",
     "\n",
-    "Importiamo la libreria dopo averla installata con *pip*:\n",
+    "Importiamo la libreria dopo averla installata con *pip* (o *conda*, se si usa la distribuzione *Anaconda*):\n",
     "        \n",
-    "        pip install keras    \n"
+    "        conda install keras    \n"
    ]
   },
   {
@@ -43,16 +43,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'2.1.5'"
+       "'2.1.6'"
       ]
      },
      "execution_count": 2,
@@ -73,14 +66,14 @@
     "---\n",
     "MNIST (http://yann.lecun.com/exdb/mnist/) è un dataset di 60K immagini di addestramento e 10K di test, costruito dal NIST (*National Institute of Standards and Technology*) negli anni 80. \n",
     "\n",
-    "Ciascuna immagine rappresenta un numero scritto a mano. *Risolvere* MNIST, cioè imparare ad assegnare ad un'immagine il numero corretto, è considerato l'\"Hello, world!\" delle reti neurali.\n",
+    "Ciascuna immagine rappresenta un numero scritto a mano. *Risolvere* MNIST, cioè imparare ad assegnare ad una immagine il numero corretto, è considerato l'\"Hello, world!\" delle reti neurali.\n",
     "\n",
     "Importiamo MNIST attraverso il modulo *datasets* di Keras. La libreria *pickle* di Python gestisce oggetti *serializzati*, cioè salvati in formato binario."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,16 +148,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f52a8704828>"
+       "<matplotlib.image.AxesImage at 0x7ff465082860>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -175,7 +168,9 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "needs_background": "light"
+     },
      "output_type": "display_data"
     }
    ],
@@ -188,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f52a7e9b1d0>"
+       "<matplotlib.image.AxesImage at 0x7ff4618162e8>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -208,7 +203,9 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "needs_background": "light"
+     },
      "output_type": "display_data"
     }
    ],
@@ -220,14 +217,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Come abbiamo detto, le label (classi) sono 10, cioè i numeri da 0 a 9. Visualizziamone la distribuzione usando numpy e *seaborn*: https://seaborn.pydata.org/.\n",
-    "\n",
-    "Seaborn è uno strumento molto utile per analizzare graficamente la distribuzione di un dataset: https://seaborn.pydata.org/tutorial/distributions.html."
+    "Come abbiamo detto, le label (classi) sono 10, cioè i numeri da 0 a 9. Visualizziamone la distribuzione usando numpy e *seaborn*: https://seaborn.pydata.org/."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -263,16 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f52a0a3e240>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff45d53add8>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -283,7 +278,9 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "needs_background": "light"
+     },
      "output_type": "display_data"
     }
    ],
@@ -322,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MLP, a differenza del percettrone e di SLP, è in grado di approssimare funzioni non lineari, come quella che ci serve per risolvere MNIST."
+    "A differenza del percettrone e di SLP, MLP è in grado di approssimare funzioni non lineari, come quella che ci serve per risolvere MNIST."
    ]
   },
   {
@@ -338,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,12 +353,12 @@
     "\n",
     "Per Keras, lo strato di input è implicito: il numero di nodi di ingresso è passato come argomento al primo livello intermedio.\n",
     "\n",
-    "Costruiamo quindi un MLP con un unico strato intermedio di 512 neuroni. La funzione di attivazione in uscita dal livello intermedio è ReLU."
+    "Costruiamo quindi un MLP con un unico strato intermedio di 512 neuroni. Scegliamo ReLU come funzione di attivazione in uscita dal livello intermedio."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,14 +389,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La rete è (quasi) pronta. Mancano due ingredienti per poterla addestrare ed utilizzare: una funzione di *loss*, cioè un sistema di valutazione dell'errore commesso dal modello sui singoli esempi, e un *ottimizzatore*, cioè un procedimento di aggiornamento dei parametri della rete (i suoi pesi): https://towardsdatascience.com/types-of-optimization-algorithms-used-in-neural-networks-and-ways-to-optimize-gradient-95ae5d39529f.\n",
+    "La rete è quasi pronta. Mancano due ingredienti per poterla addestrare ed utilizzare: una funzione di *loss*, cioè un sistema di valutazione dell'errore commesso dal modello sui singoli esempi, e un *ottimizzatore*, cioè un procedimento di aggiornamento dei parametri della rete (i suoi pesi): https://towardsdatascience.com/types-of-optimization-algorithms-used-in-neural-networks-and-ways-to-optimize-gradient-95ae5d39529f.\n",
     "\n",
     "Quanti sono i pesi della rete che abbiamo costruito?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +408,7 @@
        " <tf.Variable 'dense_2/bias:0' shape=(10,) dtype=float32_ref>]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,14 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_images = train_images.reshape((60000, 28 * 28))\n",
+    "train_images = train_images.reshape((60000, 28*28))\n",
     "train_images = train_images.astype('float32') / 255\n",
     "\n",
-    "test_images = test_images.reshape((10000, 28 * 28))\n",
+    "test_images = test_images.reshape((10000, 28*28))\n",
     "test_images = test_images.astype('float32') / 255"
    ]
   },
@@ -490,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -530,24 +527,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 21s 343us/step - loss: 0.2535 - acc: 0.9270\n",
+      "60000/60000 [==============================] - 4s 59us/step - loss: 0.2566 - acc: 0.9260\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 24s 398us/step - loss: 0.1039 - acc: 0.9692\n",
+      "60000/60000 [==============================] - 4s 59us/step - loss: 0.1031 - acc: 0.9691\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 19s 314us/step - loss: 0.0686 - acc: 0.9790\n",
+      "60000/60000 [==============================] - 4s 59us/step - loss: 0.0679 - acc: 0.9791\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 19s 312us/step - loss: 0.0498 - acc: 0.9854\n",
+      "60000/60000 [==============================] - 4s 60us/step - loss: 0.0501 - acc: 0.9851\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 20s 339us/step - loss: 0.0376 - acc: 0.9888\n"
+      "60000/60000 [==============================] - 4s 59us/step - loss: 0.0365 - acc: 0.9889\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f52a09976d8>"
+       "<keras.callbacks.History at 0x7ff45cc1e1d0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,23 +555,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 4s 450us/step\n"
+      "10000/10000 [==============================] - 0s 42us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.07402539320994402, 0.979]"
+       "[0.07191566903083585, 0.9786]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
