--- a/9. Gestione e visualizzazione dati: pandas e seaborn.ipynb
+++ b/9. Gestione e visualizzazione dati: pandas e seaborn.ipynb
@@ -883,7 +883,7 @@
    "source": [
     "seaborn\n",
     "===\n",
-    "La libreria seaborn (abbiamo visto un esempio nella lezione 8) è costruita su Matplotlib (grafica) e Scipy (statistica) ed è la libreria di Python per la visualizzazione statistica.\n",
+    "La libreria seaborn (abbiamo visto un esempio nella lezione 8) è costruita su Matplotlib (grafica) e Scipy (statistica) ed è la libreria di Python per la visualizzazione statistica: https://seaborn.pydata.org/tutorial/distributions.html.\n",
     "\n",
     "E' molto comoda da usare in coppia con pandas, e supporta l'interazione coi DataFrame. Ecco alcuni esempi di utilizzo."
    ]
@@ -4142,7 +4142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
