finita revisione lezioni

--- a/8. Deep learning: Keras.ipynb
+++ b/8. Deep learning: Keras.ipynb
@@ -421,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il metodo *compile* inizializza la rete e la prepara all'addestramento."
+    "La funzione *compile* inizializza la rete e la prepara all'addestramento."
    ]
   },
   {
