revisione dopo reinstallazione

--- a/7. Machine learning: Scikit-learn.ipynb
+++ b/7. Machine learning: Scikit-learn.ipynb
@@ -70,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<module 'sklearn.neighbors' from '/home/francesco/anaconda3/lib/python3.6/site-packages/sklearn/neighbors/__init__.py'>\n"
+      "<module 'sklearn.neighbors' from '/home/frensis/anaconda3/lib/python3.6/site-packages/sklearn/neighbors/__init__.py'>\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
      "output_type": "stream",
      "text": [
       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "           metric_params=None, n_jobs=1, n_neighbors=5, p=2,\n",
+      "           metric_params=None, n_jobs=None, n_neighbors=5, p=2,\n",
       "           weights='uniform')\n"
      ]
     }
