--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1182,26 +1182,25 @@
     "\n",
     "#Scalo i dati\n",
     "scaler = StandardScaler()\n",
-    "X_tr = scaler.fit_transform(X_tr)\n",
-    "X_val = scaler.transform(X_val)\n",
-    "X_test = scaler.transform(X_test)\n",
+    "X_tr_scaled = scaler.fit_transform(X_tr)\n",
+    "X_val_scaled = scaler.transform(X_val)\n",
     "\n",
     "#Valuto accuratezza dei modelli sul set di validazione\n",
     "for k in [1,2,3,5,10]:\n",
-    "    val_acc = neighbors.KNeighborsClassifier(n_neighbors=k).fit(X_tr, y_tr).score(X_val, y_val)\n",
+    "    val_acc = neighbors.KNeighborsClassifier(n_neighbors=k).fit(X_tr_scaled, y_tr).score(X_val_scaled, y_val)\n",
     "    print('Validation accuracy with k {}: {:.2f}'.format(k, val_acc))                  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy with selected k: 0.96\n"
+      "Test accuracy with selected k: 0.97\n"
      ]
     }
    ],
@@ -1209,11 +1208,15 @@
     "import numpy as np\n",
     "\n",
     "#Rifitto su tutto il training set\n",
-    "best_model = neighbors.KNeighborsClassifier(n_neighbors=3).fit(np.vstack([X_tr, X_val]),\n",
-    "                                                               np.hstack([y_tr, y_val]))\n",
+    "X_train, y_train = np.vstack([X_tr, X_val]), np.hstack([y_tr, y_val])\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "best_model = neighbors.KNeighborsClassifier(n_neighbors=3).fit(X_train_scaled,\n",
+    "                                                               y_train)\n",
     "\n",
     "#Valuto accuratezza del miglior modello sul test set\n",
-    "print('Test accuracy with selected k: {:.2f}'.format(best_model.score(X_test, y_test))) "
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "print('Test accuracy with selected k: {:.2f}'.format(best_model.score(X_test_scaled,\n",
+    "                                                                      y_test))) "
    ]
   },
   {
